grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) => seq($.statement, $._semicolon),

    _semicolon: ($) => choice(';', $._automatic_semicolon),

    line_comment: ($) => token(seq('//', /[^\n]*/)),

    _one_or_more_statements: ($) =>
      seq(repeat($._statement), $.statement, optional($._semicolon)),

    _switch_body: ($) => seq(repeat($._statement), $.statement),

    block: ($) =>
      prec.right(seq('{', optional($._one_or_more_statements), '}')),

    module_binding: ($) =>
      prec.left(
        seq(
          field('name', choice($.module_identifier, $.type_identifier)),
          optional(
            seq(
              ':',
              field(
                'signature',
                choice($.block, $.module_expression, $.functor),
              ),
            ),
          ),
          optional(
            seq(
              '=',
              optional('await'),
              field('definition', $._module_definition),
            ),
          ),
        ),
      ),

    module_declaration: ($) =>
      seq(
        'module',
        optional('rec'),
        optional('type'),
        sep1('and', $.module_binding),
      ),

    _module_definition: ($) =>
      choice($.block, $.module_expression, $.functor, $.extension_expression),

    external_declaration: ($) =>
      seq('external', $.value_identifier, $.type_annotation, '=', $.string),

    type_annotation: ($) => seq(':', $._inline_type),

    _type: ($) =>
      choice($._inline_type, $.variant_type, $.record_type, $.as_aliasing_type),

    _inline_type: ($) => choice($._non_function_inline_type, $.function_type),

    _non_function_inline_type: ($) =>
      choice(
        $._type_identifier,
        $.tuple_type,
        $.polyvar_type,
        $.object_type,
        $.record_type,
        $.generic_type,
        $.unit_type,
        $.module_pack,
        $.unit,
        $.polymorphic_type,
        alias($._as_aliasing_non_function_inline_type, $.as_aliasing_type),
      ),

    function_type: ($) =>
      prec.left(seq($.function_type_parameters, '=>', $._type)),

    function_type_parameters: ($) =>
      choice($._non_function_inline_type, $._function_type_parameter_list),

    _function_type_parameter_list: ($) =>
      seq('(', commaSept(alias($.function_type_parameter, $.parameter)), ')'),

    let_declaration: ($) =>
      seq(choice('export', 'let'), optional('rec'), sep1('and', $.let_binding)),

    let_binding: ($) =>
      seq(
        field('pattern', $._pattern),
        choice(
          seq(
            $.type_annotation,
            optional(seq('=', field('body', $.expression))),
          ),
          seq('=', field('body', $.expression)),
        ),
      ),

    expression_statement: ($) => $.expression,

    switch_expression: ($) =>
      seq(
        'switch',
        $.expression,
        '{',
        repeat(seq($.switch_match, optional($._semicolon))),
        '}',
      ),

    switch_match: ($) =>
      prec.dynamic(
        -1,
        seq(
          '|',
          field('pattern', choice($.variant_spread_pattern, $._pattern)),
          optional($.guard),
          '=>',
          field('body', alias($._switch_body, $.sequence_expression)),
        ),
      ),

    guard: ($) => seq(choice('if', 'when'), $.expression),

    call_expression: ($) =>
      prec(
        'call',
        seq(
          field('function', $.primary_expression),
          field('arguments', alias($.call_arguments, $.arguments)),
        ),
      ),

    pipe_expression: ($) =>
      prec.left(
        seq(
          choice($.primary_expression, $.block),
          choice('->', '|>'),
          choice($.primary_expression, $.block),
        ),
      ),

    _pattern: ($) =>
      prec.dynamic(
        -1,
        seq(
          choice(
            seq(optional('?'), $.value_identifier),
            $._literal_pattern,
            $._destructuring_pattern,
            $.polyvar_type_pattern,
            $.unit,
            $.module_pack,
            $.lazy_pattern,
            $.parenthesized_pattern,
            $.or_pattern,
            $.range_pattern,
            $.exception_pattern,
          ),
          optional($.as_aliasing),
        ),
      ),

    decorator: ($) =>
      choice(
        alias($._decorator_inline, $.decorator_identifier),
        seq(alias($._decorator, $.decorator_identifier), $.decorator_arguments),
      ),

    decorator_arguments: ($) =>
      seq('(', choice(commaSept($.expression), $.type_annotation), ')'),

    binary_expression: ($) =>
      choice(
        ...[
          ['&&&', 'binary_bitand'],
          ['&&', 'binary_and'],
          ['|||', 'binary_bitor'],
          ['||', 'binary_or'],
          ['^^^', 'binary_bitxor'],
          ['++', 'binary_plus'],
          ['+', 'binary_plus'],
          ['+.', 'binary_plus'],
          ['-', 'binary_plus'],
          ['-.', 'binary_plus'],
          ['*', 'binary_times'],
          ['*.', 'binary_times'],
          ['%', 'binary_times'],
          ['**', 'binary_pow', 'right'],
          ['/', 'binary_times'],
          ['/.', 'binary_times'],
          ['<<', 'binary_shift'],
          ['>>>', 'binary_shift'],
          ['>>', 'binary_shift'],
          ['<', 'binary_relation'],
          ['<=', 'binary_relation'],
          ['==', 'binary_relation'],
          ['===', 'binary_relation'],
          ['!=', 'binary_relation'],
          ['!==', 'binary_relation'],
          ['>=', 'binary_relation'],
          ['>', 'binary_relation'],
        ].map(([operator, precedence, associativity]) =>
          (associativity === 'right' ? prec.right : prec.left)(
            precedence,
            seq(
              field('left', $.expression),
              field('operator', operator),
              field('right', $.expression),
            ),
          ),
        ),
      ),

    extension_expression: ($) =>
      prec.right(
        seq(
          repeat1('%'),
          $.extension_identifier,
          optional($._extension_expression_payload),
        ),
      ),

    _extension_expression_payload: ($) =>
      seq('(', choice($._one_or_more_statements, $.type_annotation), ')'),

    type_identifier: ($) =>
      choice($._identifier, /'[a-zA-Z0-9_']*/, $._escape_identifier),

    _identifier: (_) => /[a-z_][a-zA-Z0-9_']*/,

    value_identifier: ($) =>
      choice($._identifier, $._reserved_identifier, $._escape_identifier),

    _escape_identifier: ($) => token(seq('\\"', /[^"]+/, '"')),

    module_identifier: ($) => /[A-Z][a-zA-Z0-9_']*/,

    extension_identifier: ($) => /[a-zA-Z0-9_\.]+/,

    number: ($) => {
      // OCaml: https://github.com/tree-sitter/tree-sitter-ocaml/blob/f1106bf834703f1f2f795da1a3b5f8f40174ffcc/ocaml/grammar.js#L26
      const hex_literal = seq(
        optional(choice('-', '+')),
        /0[xX][0-9A-Fa-f][0-9A-Fa-f_]*(\.[0-9A-Fa-f_]*)?([pP][+\-]?[0-9][0-9_]*)?[g-zG-Z]?/,
      );

      const decimal_digits = /\d(_?\d)*/;
      const signed_integer = seq(optional(choice('-', '+')), decimal_digits);
      const exponent_part = seq(choice('e', 'E'), signed_integer);

      const binary_literal = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/);

      const octal_literal = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/);

      const bigint_literal = seq(
        optional(choice('-', '+')),
        choice(hex_literal, binary_literal, octal_literal, decimal_digits),
        'n',
      );

      const decimal_integer_literal = choice(
        repeat1('0'),
        seq(repeat('0'), /[1-9]/, optional(seq(optional('_'), decimal_digits))),
      );

      const decimal_literal = seq(
        optional(choice('-', '+')),
        choice(
          seq(
            decimal_integer_literal,
            '.',
            optional(decimal_digits),
            optional(exponent_part),
          ),
          seq('.', decimal_digits, optional(exponent_part)),
          seq(decimal_integer_literal, exponent_part),
          decimal_digits,
        ),
      );

      const int_32_64 = seq(
        optional(choice('-', '+')),
        choice(
          decimal_integer_literal,
          binary_literal,
          octal_literal,
          hex_literal,
        ),
        choice('L', 'l'),
      );

      return token(
        choice(
          hex_literal,
          decimal_literal,
          binary_literal,
          octal_literal,
          bigint_literal,
          int_32_64,
        ),
      );
    },

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            alias($.unescaped_double_string_fragment, $.string_fragment),
            $.escape_sequence,
          ),
        ),
        '"',
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    template_string: ($) => seq('`', optional($.template_string_content), '`'),

    template_string_content: ($) =>
      repeat1(
        choice(
          $._template_chars,
          $.template_substitution,
          /\s/,
          choice(alias('\\`', $.escape_sequence), $.escape_sequence),
        ),
      ),

    template_substitution: ($) =>
      choice(seq('$', $.value_identifier), seq('${', $.expression, '}')),

    _reserved_identifier: ($) => choice('async', 'unpack'),
  },
});

/**
 * Creates a rule that matches one or more rules separated by vertical bars.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function barSep1(rule) {
  return seq(rule, repeat(seq('|', rule)));
}

/**
 * Creates a rule that matches one or more rules separated by commas.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

/**
 * Creates a rule that matches two or more rules separated by commas.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep2(rule) {
  return seq(rule, ',', commaSep1(rule));
}

/**
 * Creates a comma-separated list with at least one rule and an optional trailing comma.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep1t(rule) {
  return seq(commaSep1(rule), optional(','));
}

/**
 * Creates a comma-separated list with at least two rules and an optional trailing comma.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep2t(rule) {
  return seq(commaSep2(rule), optional(','));
}

/**
 * Creates an optional comma-separated list with an optional trailing comma.
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function commaSept(rule) {
  return optional(commaSep1t(rule));
}

/**
 * Creates a rule that matches one or more rules separated by a delimiter.
 *
 * @param {string} delimiter
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function sep1(delimiter, rule) {
  return seq(rule, repeat(seq(delimiter, rule)));
}

/**
 * Creates a rule that matches a final rule with an optional dotted prefix.
 *
 * @param {Rule} prefix
 * @param {Rule} final
 *
 * @returns {ChoiceRule}
 */
function path(prefix, final) {
  return choice(final, seq(prefix, '.', final));
}

/**
 * Creates a rule enclosed in parentheses.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function parenthesize(rule) {
  return seq('(', rule, ')');
}
