test/corpus/comments.txt
================================================================================
Comments
================================================================================

// Single line
1

/*
 * Multiline
 */
2

/* /* Nested
  /* multiple */ times
  // */ */
3

4 // post single-line

5 /* post multi-line */

/* / */
6

/* */ 7

/** **/ 8

/* comment //*/ */*/ 9

foo
  // in-pipe
  ->bar

switch foo {
| 1 => 1
// in-switch
}

switch foo {
| 1 => 1
/* block comment in switch */
| 2 => 2
}

switch l {
| "a" => letterAll
/* | "b" => [||] */
/* | "g" => [||] */
/* | "h" => [||] */
/* | "i" => [||] */
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (expression_statement
    (number))
  (block_comment)
  (expression_statement
    (number))
  (block_comment)
  (expression_statement
    (number))
  (expression_statement
    (number))
  (line_comment)
  (expression_statement
    (number))
  (block_comment)
  (block_comment)
  (expression_statement
    (number))
  (block_comment)
  (expression_statement
    (number))
  (block_comment)
  (expression_statement
    (number))
  (block_comment)
  (expression_statement
    (number))
  (expression_statement
    (pipe_expression
      (value_identifier)
      (line_comment)
      (value_identifier)))
  (expression_statement
    (switch_expression
      (value_identifier)
      (switch_match
        (number)
        (sequence_expression
          (expression_statement
            (number))))
      (line_comment)))
  (expression_statement
    (switch_expression
      (value_identifier)
      (switch_match
        (number)
        (sequence_expression
          (expression_statement
            (number))))
      (block_comment)
      (switch_match
        (number)
        (sequence_expression
          (expression_statement
            (number))))))
  (expression_statement
    (switch_expression
      (value_identifier)
      (switch_match
        (string
          (string_fragment))
        (sequence_expression
          (expression_statement
            (value_identifier))))
      (block_comment)
      (block_comment)
      (block_comment)
      (block_comment))))

================================================================================
Consecutive block comments at end of block
================================================================================

module UI = {
  @get external detail: t => int = "detail"
  /* external view : t -> Dom.window = "view" [@@get] */
  /* Should return DOMAbstractView/WindowProxy */
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_binding
      (module_identifier)
      (block
        (decorator
          (decorator_identifier))
        (external_declaration
          (value_identifier)
          (type_annotation
            (function_type
              (function_type_parameters
                (type_identifier))
              (type_identifier)))
          (string
            (string_fragment)))
        (block_comment)
        (block_comment)))))

================================================================================
Block comment after a template substitution
================================================================================

let a = `t ${x}`
let b = f(/* c */ 1)

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (value_identifier)
      (template_string
        (template_string_content
          (template_substitution
            (value_identifier))))))
  (let_declaration
    (let_binding
      (value_identifier)
      (call_expression
        (value_identifier)
        (arguments
          (block_comment)
          (number))))))
