test/corpus/error_scopes.txt
===========================================
Limit switch damage
===========================================

switch foo {
| 7 => 42
| zhopa-priehali?
}

let x = 5

---

(source_file
  (expression_statement
    (switch_expression
      (identifier)
      (switch_match (number) (expression_statement (number)))
      (ERROR (identifier) (UNEXPECTED 'p'))))
  (let_binding (identifier) (number)))
